--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@mdi/font": "5.9.55",
+    "axios": "^1.1.3",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
     "vue": "^3.2.41",
