--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "roboto-fontface": "*",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5",
-    "vuetify": "^3.0.0-beta.0",
+    "vuetify": "^3.3.3",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
